--- a/blog.html
+++ b/blog.html
@@ -5,21 +5,120 @@
   <title>Blog</title>
 </head>
 <body>
-  <h1>Blog Saya</h1>
+  <center>
+    <h1>
+      <font face="Brush Script MT, cursive" size="7">
+        Hello, Welcome to My Blog!
+      </font>
+    </h1>
+  </center>
 
+  <center>
+    <img src="rame.png" alt="Cover Blog" border="1" width="100%">
+  </center>
+  
+  <center>
+    <p>
+      <font face="Times New Roman, serif" size="5">
+        Selamat datang di blog saya! Di sini saya akan berbagi artikel tentang berbagai topik menarik. Tapi kenalan bentar dulu yaa
+      </font>
+    </p>
+  </center>
+
+  <center>
+    <img src="profil.jpg" alt="Foto Profil" border="1" width="240" height="320">
+  </center>
+  
   <article>
-    <img src="cover-blog.jpg" alt="Cover Blog" width="300">
-    <h2>Judul Blog Pertama</h2>
-    <p>Oleh: <img src="author.jpg" alt="Foto Author" width="30"> <b>Nama Author</b></p>
-    <p>Tanggal: 3 September 2025</p>
-    <p>Label: <span>HTML</span>, <span>Pemrograman</span></p>
-    <a href="detail-blog.html">Baca selengkapnya</a>
+    <h2 align="center">Josua Lens Franklin Saragih</h2>
+    <p align="center">Tanggal diposting : 3 September 2025</p>
   </article>
 
-  <nav>
-    <a href="form.html">Form Pendaftaran</a> |
-    <a href="nilai.html">Tabel Nilai</a> |
-    <a href="cv.html">Curriculum Vitae</a>
-  </nav>
+  <div align="center">
+    <table border="0" cellpadding="0" cellspacing="24" width="520" style="border-collapse:separate; border:6px solid #78909c; box-shadow:0 8px 32px #b0bec5; border-radius:18px;">
+      <tr>
+        <th colspan="2" style="font-size:24px; padding:22px 0; background:#cfd8dc; border-radius:14px; box-shadow:0 2px 12px #b0bec5; font-weight:bold;">
+          Menu Navigasi
+        </th>
+      </tr>
+      <tr>
+        <td align="center">
+          <a href="detail-blog.html" style="
+            display:inline-block;
+            width:200px;
+            height:80px;
+            line-height:80px;
+            font-size:22px;
+            font-weight:bold;
+            background:#e0e7ef;
+            color:#333;
+            text-decoration:none;
+            border-radius:16px;
+            box-shadow:0 6px 20px #b0bec5;
+            border:4px solid #90a4ae;
+            transition:box-shadow 0.2s, background 0.2s;">
+            Detail Blog
+          </a>
+        </td>
+        <td align="center">
+          <a href="form.html" style="
+            display:inline-block;
+            width:200px;
+            height:80px;
+            line-height:80px;
+            font-size:22px;
+            font-weight:bold;
+            background:#e0e7ef;
+            color:#333;
+            text-decoration:none;
+            border-radius:16px;
+            box-shadow:0 6px 20px #b0bec5;
+            border:4px solid #90a4ae;
+            transition:box-shadow 0.2s, background 0.2s;">
+            Form Pendaftaran
+          </a>
+        </td>
+      </tr>
+      <tr>
+        <td align="center">
+          <a href="nilai.html" style="
+            display:inline-block;
+            width:200px;
+            height:80px;
+            line-height:80px;
+            font-size:22px;
+            font-weight:bold;
+            background:#e0e7ef;
+            color:#333;
+            text-decoration:none;
+            border-radius:16px;
+            box-shadow:0 6px 20px #b0bec5;
+            border:4px solid #90a4ae;
+            transition:box-shadow 0.2s, background 0.2s;">
+            Tabel Nilai
+          </a>
+        </td>
+        <td align="center">
+          <a href="cv.html" style="
+            display:inline-block;
+            width:200px;
+            height:80px;
+            line-height:80px;
+            font-size:22px;
+            font-weight:bold;
+            background:#e0e7ef;
+            color:#333;
+            text-decoration:none;
+            border-radius:16px;
+            box-shadow:0 6px 20px #b0bec5;
+            border:4px solid #90a4ae;
+            transition:box-shadow 0.2s, background 0.2s;">
+            CV
+          </a>
+        </td>
+      </tr>
+    </table>
+  </div>
+
 </body>
 </html>
