--- a/cv.html
+++ b/cv.html
@@ -6,35 +6,37 @@
 </head>
 <body>
   <h1>Curriculum Vitae</h1>
-  <img src="foto-saya.jpg" alt="Foto" width="150">
+  <img src="josua.JPG" alt="Foto" width="150">
   <h2>Tentang Saya</h2>
-  <p>Saya mahasiswa yang sedang belajar Pemrograman Web.</p>
+  <p>Saya adlalah mahasiswa jurusan informatika, yang berkuliah di IT DEL. Sekarang saya sedang belajar pengembangan web. Jadi maaf yaa kalau hasil web nya masih jelek. Maklumllah kan masih belajar. </p>
 
   <h3>Kontak</h3>
-  <p>Email: saya@email.com</p>
-  <p>WhatsApp: 0812-xxxx-xxxx</p>
+  <p>Email: josuaasrgh@email.com</p>
+  <p>WhatsApp: 0895-6020-76047</p>
 
   <h3>Riwayat Pendidikan</h3>
   <ul>
-    <li>SD - SMP - SMA</li>
-    <li>S1 - Informatika</li>
+    <li>SD      : SD Sanfrancesco Balige</li>
+    <li>SMP     : SMP Budhi Dharma Balige</li>
+    <li>SMA     : SMA N 1 Laguboti</li>
+    <li>S1 - Informatika - IT DEL</li>
   </ul>
 
   <h3>Pengalaman</h3>
   <ul>
-    <li>Asisten Laboratorium</li>
-    <li>Panitia Kegiatan Kampus</li>
+    <li>Mengendarai mobil selama 2 hari nonstop</li>
+    <li>Selalu bersyukur</li>
   </ul>
 
   <h3>Keahlian</h3>
   <ul>
-    <li>HTML & CSS</li>
-    <li>JavaScript</li>
+    <li>Bermain Game</li>
+    <li>Membuat suasana menjadi asik</li>
   </ul>
 
   <h3>Sertifikat</h3>
   <ul>
-    <li>Sertifikat Dicoding HTML</li>
+    <li>3rd HIMASTI CODING</li>
   </ul>
 
   <h3>Portfolio</h3>
@@ -42,10 +44,10 @@
     <li><a href="https://github.com/username">GitHub</a></li>
   </ul>
 
-  <nav>
-    <a href="blog.html">Blog</a> |
-    <a href="form.html">Form Pendaftaran</a> |
-    <a href="nilai.html">Tabel Nilai</a>
-  </nav>
+  <div style="margin:30px 0 0 180px;">
+    <a href="blog.html" style="display:inline-block; padding:12px 36px; font-size:1.2em; text-decoration:none; color:#333; background:#f2f2f2; border-radius:8px; margin-right:18px;">Blog</a>
+    <a href="nilai.html" style="display:inline-block; padding:12px 36px; font-size:1.2em; text-decoration:none; color:#333; background:#f2f2f2; border-radius:8px; margin-right:18px;">Tabel Nilai</a>
+    <a href="cv.html" style="display:inline-block; padding:12px 36px; font-size:1.2em; text-decoration:none; color:#333; background:#f2f2f2; border-radius:8px;">Curriculum Vitae</a>
+  </div>
 </body>
 </html>
