--- a/nilai.html
+++ b/nilai.html
@@ -2,35 +2,176 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
-  <title>Tabel Nilai</title>
+  <title>Tabel Perolehan Nilai</title>
 </head>
 <body>
   <h1>Tabel Perolehan Nilai</h1>
-  <table border="1" cellpadding="5">
+
+  <table border="1" cellpadding="5" cellspacing="0">
+    <!-- Header Utama -->
     <tr>
-      <th>No</th>
-      <th>Nama</th>
-      <th>Mata Kuliah</th>
-      <th>Nilai</th>
+      <th rowspan="4">No</th>
+      <th rowspan="4">NIM</th>
+      <th rowspan="4">Nama</th>
+      <th rowspan="4">Program Studi</th>
+      <th rowspan="4">Kelas</th>
+      <th colspan="3">Kuis</th>
+      <th colspan="3">Proyek</th>
+      <th colspan="3">Tugas</th>
+      <th colspan="3">UAS</th>
+      <th colspan="4">UTS</th>
+      <th rowspan="4">Bentuk komponen<br>Bobot / Nilai Akhir</th>
+    </tr>
+
+    <!-- Header Bobot -->
+    <tr>
+      <th colspan="3">Bobot 10</th>
+      <th colspan="3">Bobot 5</th>
+      <th colspan="3">Bobot 15</th>
+      <th colspan="3">Bobot 40</th>
+      <th colspan="4">Bobot 30</th>
+    </tr>
+
+    <!-- Header Subbagian -->
+    <tr>
+      <!-- Kuis -->
+      <th colspan="2">Nilai</th>
+      <th rowspan="2">Total</th>
+
+      <!-- Proyek -->
+      <th colspan="2">Nilai</th>
+      <th rowspan="2">Total</th>
+
+      <!-- Tugas -->
+      <th colspan="2">Nilai</th>
+      <th rowspan="2">Total</th>
+
+      <!-- UAS -->
+      <th colspan="2">Nilai</th>
+      <th rowspan="2">Total</th>
+
+      <!-- UTS -->
+      <th colspan="3">Nilai</th>
+      <th rowspan="2">Total</th>
+    </tr>
+
+    <!-- Header Detail -->
+    <tr>
+      <th>K1-1</th>
+      <th>K1-2</th>
+
+      <th>P2-1</th>
+      <th>P1-1</th>
+
+      <th>T1-1</th>
+      <th>T2-1</th>
+
+      <th>UAS1-1</th>
+      <th>UAS2-1</th>
+
+      <th>UTS1-1</th>
+      <th>UTS2-1</th>
+      <th>UTS2-2</th>
+    </tr>
+
+    <!-- Data Mahasiswa -->
+    <tr>
+      <td>1</td><td>11S2400</td><td>David Lodewick Simbolon</td><td>Sarjana</td><td>11IF1</td>
+      <td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td>
     </tr>
     <tr>
-      <td>1</td>
-      <td>Budi</td>
-      <td>Pemrograman Web</td>
-      <td>90</td>
+      <td>2</td><td>11S2400</td><td>Edwin Christofel</td><td>Sarjana</td><td>11IF1</td>
+      <td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td>
     </tr>
     <tr>
-      <td>2</td>
-      <td>Ani</td>
-      <td>Pemrograman Web</td>
-      <td>85</td>
+      <td>3</td><td>11S2400</td><td>Aditya Putera Kelat</td><td>Sarjana</td><td>11IF1</td>
+      <td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td>
+    </tr>
+    <tr>
+      <td>4</td><td>11S2400</td><td>Gian Donovan</td><td>Sarjana</td><td>11IF1</td>
+      <td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td>
+    </tr>
+    <tr>
+      <td>5</td><td>11S2400</td><td>Ruti Claudia Panggabean</td><td>Sarjana</td><td>11IF1</td>
+      <td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td>
+    </tr>
+    <tr>
+      <td>6</td><td>11S2400</td><td>Martha Saulina Nababan</td><td>Sarjana</td><td>11IF1</td>
+      <td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td>
+    </tr>
+    <tr>
+      <td>7</td><td>11S2400</td><td>Miftahul Jannah Siregar</td><td>Sarjana</td><td>11IF1</td>
+      <td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td>
+    </tr>
+    <tr>
+      <td>8</td><td>11S2400</td><td>Dea Maranata Siregar</td><td>Sarjana</td><td>11IF1</td>
+      <td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td>
+    </tr>
+    <tr>
+      <td>9</td><td>11S2400</td><td>Sandrina Triana Sihite</td><td>Sarjana</td><td>11IF1</td>
+      <td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td>
+    </tr>
+    <tr>
+      <td>10</td><td>11S2401</td><td>Dimas Rexan Samuel</td><td>Sarjana</td><td>11IF1</td>
+      <td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td>
+    </tr>
+
+    <!-- Baris Rata-rata -->
+    <tr>
+      <td colspan="5"><b>Rata-Rata</b></td>
+      <td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td>
     </tr>
   </table>
 
-  <nav>
-    <a href="blog.html">Blog</a> |
-    <a href="form.html">Form Pendaftaran</a> |
-    <a href="cv.html">Curriculum Vitae</a>
-  </nav>
+  <br>
+  <div style="margin:30px 0 0 180px;">
+    <a href="blog.html" style="display:inline-block; padding:12px 36px; font-size:1.2em; text-decoration:none; color:#333; background:#f2f2f2; border-radius:8px; margin-right:18px;">Blog</a>
+    <a href="nilai.html" style="display:inline-block; padding:12px 36px; font-size:1.2em; text-decoration:none; color:#333; background:#f2f2f2; border-radius:8px; margin-right:18px;">Tabel Nilai</a>
+    <a href="cv.html" style="display:inline-block; padding:12px 36px; font-size:1.2em; text-decoration:none; color:#333; background:#f2f2f2; border-radius:8px;">Curriculum Vitae</a>
+  </div>
 </body>
 </html>
