--- a/blog.html
+++ b/blog.html
@@ -35,85 +35,33 @@
   </article>
 
   <div align="center">
-    <table border="0" cellpadding="0" cellspacing="24" width="520" style="border-collapse:separate; border:6px solid #78909c; box-shadow:0 8px 32px #b0bec5; border-radius:18px;">
-      <tr>
-        <th colspan="2" style="font-size:24px; padding:22px 0; background:#cfd8dc; border-radius:14px; box-shadow:0 2px 12px #b0bec5; font-weight:bold;">
-          Menu Navigasi
+    <table border="6" cellpadding="24" cellspacing="0" width="520">
+      <tr bgcolor="#cfd8dc">
+        <th colspan="2">
+          <font size="6"><b>Menu Navigasi</b></font>
         </th>
       </tr>
       <tr>
-        <td align="center">
-          <a href="detail-blog.html" style="
-            display:inline-block;
-            width:200px;
-            height:80px;
-            line-height:80px;
-            font-size:22px;
-            font-weight:bold;
-            background:#e0e7ef;
-            color:#333;
-            text-decoration:none;
-            border-radius:16px;
-            box-shadow:0 6px 20px #b0bec5;
-            border:4px solid #90a4ae;
-            transition:box-shadow 0.2s, background 0.2s;">
-            Detail Blog
+        <td align="center" bgcolor="#e0e7ef" width="200" height="80">
+          <a href="detail-blog.html">
+            <font size="5"><b>Detail Blog</b></font>
           </a>
         </td>
-        <td align="center">
-          <a href="form.html" style="
-            display:inline-block;
-            width:200px;
-            height:80px;
-            line-height:80px;
-            font-size:22px;
-            font-weight:bold;
-            background:#e0e7ef;
-            color:#333;
-            text-decoration:none;
-            border-radius:16px;
-            box-shadow:0 6px 20px #b0bec5;
-            border:4px solid #90a4ae;
-            transition:box-shadow 0.2s, background 0.2s;">
-            Form Pendaftaran
+        <td align="center" bgcolor="#e0e7ef" width="200" height="80">
+          <a href="form.html">
+            <font size="5"><b>Form Pendaftaran</b></font>
           </a>
         </td>
       </tr>
       <tr>
-        <td align="center">
-          <a href="nilai.html" style="
-            display:inline-block;
-            width:200px;
-            height:80px;
-            line-height:80px;
-            font-size:22px;
-            font-weight:bold;
-            background:#e0e7ef;
-            color:#333;
-            text-decoration:none;
-            border-radius:16px;
-            box-shadow:0 6px 20px #b0bec5;
-            border:4px solid #90a4ae;
-            transition:box-shadow 0.2s, background 0.2s;">
-            Tabel Nilai
+        <td align="center" bgcolor="#e0e7ef" width="200" height="80">
+          <a href="nilai.html">
+            <font size="5"><b>Tabel Nilai</b></font>
           </a>
         </td>
-        <td align="center">
-          <a href="cv.html" style="
-            display:inline-block;
-            width:200px;
-            height:80px;
-            line-height:80px;
-            font-size:22px;
-            font-weight:bold;
-            background:#e0e7ef;
-            color:#333;
-            text-decoration:none;
-            border-radius:16px;
-            box-shadow:0 6px 20px #b0bec5;
-            border:4px solid #90a4ae;
-            transition:box-shadow 0.2s, background 0.2s;">
-            CV
+        <td align="center" bgcolor="#e0e7ef" width="200" height="80">
+          <a href="cv.html">
+            <font size="5"><b>CV</b></font>
           </a>
         </td>
       </tr>
