--- a/detail-blog.html
+++ b/detail-blog.html
@@ -5,18 +5,53 @@
   <title>Detail Blog</title>
 </head>
 <body>
-  <h1>Judul Blog Pertama</h1>
-  <img src="cover-blog.jpg" alt="Cover Blog" width="400">
-  <p>Oleh: <img src="author.jpg" width="30"> <b>Nama Author</b></p>
-  <p>Tanggal: 3 September 2025</p>
-  <p>Label: <span>HTML</span>, <span>Pemrograman</span></p>
-  <p>Deskripsi blog: Ini adalah isi blog yang menjelaskan tentang dasar HTML.</p>
+  <center>
+    <h1>
+      <font face="Brush Script MT, cursive" size="7">
+        Detail Blog
+      </font>
+    </h1>
+  </center>
+
+  <center>
+    <img src="rame.png" alt="Cover Blog" border="1" width="100%">
+  </center>
+
+  <center>
+    <img src="profil.jpg" alt="Foto Profil" border="1" width="240" height="320">
+  </center>
+  
+  <article>
+    <h2 align="center">Josua Lens Franklin Saragih</h2>
+    <p align="center">Tanggal diposting : 3 September 2025</p>
+    <h2 align="center">DESKRIPSI BLOG</h2>
+    <p align="center">
+      Selamat datang di blog pribadi milik Josua Lens Franklin Saragih! <br><br>
+      Blog ini hadir sebagai ruang ekspresi, tempat berbagi cerita, pengalaman, dan pemikiran yang lahir dari perjalanan hidup sehari-hari. 
+      Di sini, Josua tidak hanya menuliskan artikel, tetapi juga membagikan potret kebersamaan yang penuh makna—baik bersama keluarga, teman, maupun dalam perjalanan ke berbagai tempat menarik. <br><br>
+      Dengan tampilan yang sederhana namun hangat, blog ini menyajikan nuansa akrab dan personal. Pembaca seolah diajak untuk duduk santai, mendengar cerita, dan ikut merasakan setiap pengalaman yang dituangkan dalam tulisan maupun gambar. 
+      Senyuman ramah dari pemilik blog pada halaman utama semakin memperkuat kesan bahwa blog ini adalah ruang untuk berkenalan, berbagi, dan saling menginspirasi. <br><br>
+      <b>Visi Blog</b><br>
+      Visi utama dari blog ini adalah menjadi wadah inspirasi dan refleksi, tempat di mana setiap kisah dan pengalaman hidup dapat memberikan semangat baru bagi pembacanya. 
+      Blog ini tidak hanya sekadar menyimpan cerita pribadi, tetapi juga ingin menghadirkan nilai yang bisa bermanfaat untuk banyak orang. <br><br>
+      Josua percaya bahwa setiap momen dalam hidup, sekecil apa pun, selalu memiliki makna. Dengan membagikannya, pembaca bisa menemukan sudut pandang baru, rasa syukur, atau bahkan motivasi untuk terus melangkah. <br><br>
+      <b>Tujuan Blog</b><br>
+      <ul>
+        <li>Berbagi Pengalaman — menuliskan kisah nyata tentang perjalanan hidup agar bisa menjadi pelajaran dan inspirasi.</li>
+        <li>Mengabadikan Kenangan — setiap foto dan tulisan adalah dokumentasi berharga.</li>
+        <li>Membangun Koneksi — menghadirkan rasa kebersamaan antara penulis dan pembaca.</li>
+        <li>Memberi Inspirasi & Motivasi — pembaca bisa mendapatkan energi positif dan dorongan semangat.</li>
+        <li>Wadah Kreativitas — sarana menulis, bercerita, sekaligus berkreasi dengan visual.</li>
+      </ul>
+      Singkatnya, blog ini adalah cerminan perjalanan hidup Josua Lens Franklin Saragih—penuh dengan cerita, kebersamaan, dan harapan untuk terus memberi makna, baik untuk diri sendiri maupun orang lain.
+    </p>
+  </article>
 
   <h3>Form Komentar</h3>
   <form>
-    <label>Nama: <input type="text"></label><br>
-    <label>Komentar: <textarea></textarea></label><br>
-    <button type="submit">Kirim</button>
+    <label>Nama: <input type="text" size="50"></label><br><br>
+    <label>Komentar: <br><textarea cols="70" rows="6"></textarea></label><br><br>
+    <input type="submit" value="Kirim">
   </form>
 
   <h3>Komentar</h3>
@@ -24,7 +59,20 @@
     <img src="user1.jpg" width="30"> <b>User 1</b>: Artikel ini sangat bermanfaat!
   </div>
 
-  <br>
-  <a href="blog.html">← Kembali ke Blog</a>
+  <center>
+    <table border="1" cellpadding="15" cellspacing="10" width="600">
+      <tr>
+        <td align="center" bgcolor="#f2f2f2" width="200">
+          <a href="blog.html"><font size="4">Blog</font></a>
+        </td>
+        <td align="center" bgcolor="#f2f2f2" width="200">
+          <a href="nilai.html"><font size="4">Tabel Nilai</font></a>
+        </td>
+        <td align="center" bgcolor="#f2f2f2" width="200">
+          <a href="cv.html"><font size="4">Curriculum Vitae</font></a>
+        </td>
+      </tr>
+    </table>
+  </center>
 </body>
 </html>
