--- a/nilai.html
+++ b/nilai.html
@@ -5,9 +5,9 @@
   <title>Tabel Perolehan Nilai</title>
 </head>
 <body>
-  <h1>Tabel Perolehan Nilai</h1>
+  <h1 align="center">Tabel Perolehan Nilai</h1>
 
-  <table border="1" cellpadding="5" cellspacing="0">
+  <table border="1" cellpadding="5" cellspacing="0" align="center">
     <!-- Header Utama -->
     <tr>
       <th rowspan="4">No</th>
@@ -91,74 +91,11 @@
       <td>0</td><td>0</td><td>0</td>
       <td>0</td><td>0</td><td>0</td><td>0</td>
     </tr>
-    <tr>
-      <td>3</td><td>11S2400</td><td>Aditya Putera Kelat</td><td>Sarjana</td><td>11IF1</td>
-      <td>0</td><td>0</td><td>0</td>
-      <td>0</td><td>0</td><td>0</td>
-      <td>0</td><td>0</td><td>0</td>
-      <td>0</td><td>0</td><td>0</td>
-      <td>0</td><td>0</td><td>0</td><td>0</td>
-    </tr>
-    <tr>
-      <td>4</td><td>11S2400</td><td>Gian Donovan</td><td>Sarjana</td><td>11IF1</td>
-      <td>0</td><td>0</td><td>0</td>
-      <td>0</td><td>0</td><td>0</td>
-      <td>0</td><td>0</td><td>0</td>
-      <td>0</td><td>0</td><td>0</td>
-      <td>0</td><td>0</td><td>0</td><td>0</td>
-    </tr>
-    <tr>
-      <td>5</td><td>11S2400</td><td>Ruti Claudia Panggabean</td><td>Sarjana</td><td>11IF1</td>
-      <td>0</td><td>0</td><td>0</td>
-      <td>0</td><td>0</td><td>0</td>
-      <td>0</td><td>0</td><td>0</td>
-      <td>0</td><td>0</td><td>0</td>
-      <td>0</td><td>0</td><td>0</td><td>0</td>
-    </tr>
-    <tr>
-      <td>6</td><td>11S2400</td><td>Martha Saulina Nababan</td><td>Sarjana</td><td>11IF1</td>
-      <td>0</td><td>0</td><td>0</td>
-      <td>0</td><td>0</td><td>0</td>
-      <td>0</td><td>0</td><td>0</td>
-      <td>0</td><td>0</td><td>0</td>
-      <td>0</td><td>0</td><td>0</td><td>0</td>
-    </tr>
-    <tr>
-      <td>7</td><td>11S2400</td><td>Miftahul Jannah Siregar</td><td>Sarjana</td><td>11IF1</td>
-      <td>0</td><td>0</td><td>0</td>
-      <td>0</td><td>0</td><td>0</td>
-      <td>0</td><td>0</td><td>0</td>
-      <td>0</td><td>0</td><td>0</td>
-      <td>0</td><td>0</td><td>0</td><td>0</td>
-    </tr>
-    <tr>
-      <td>8</td><td>11S2400</td><td>Dea Maranata Siregar</td><td>Sarjana</td><td>11IF1</td>
-      <td>0</td><td>0</td><td>0</td>
-      <td>0</td><td>0</td><td>0</td>
-      <td>0</td><td>0</td><td>0</td>
-      <td>0</td><td>0</td><td>0</td>
-      <td>0</td><td>0</td><td>0</td><td>0</td>
-    </tr>
-    <tr>
-      <td>9</td><td>11S2400</td><td>Sandrina Triana Sihite</td><td>Sarjana</td><td>11IF1</td>
-      <td>0</td><td>0</td><td>0</td>
-      <td>0</td><td>0</td><td>0</td>
-      <td>0</td><td>0</td><td>0</td>
-      <td>0</td><td>0</td><td>0</td>
-      <td>0</td><td>0</td><td>0</td><td>0</td>
-    </tr>
-    <tr>
-      <td>10</td><td>11S2401</td><td>Dimas Rexan Samuel</td><td>Sarjana</td><td>11IF1</td>
-      <td>0</td><td>0</td><td>0</td>
-      <td>0</td><td>0</td><td>0</td>
-      <td>0</td><td>0</td><td>0</td>
-      <td>0</td><td>0</td><td>0</td>
-      <td>0</td><td>0</td><td>0</td><td>0</td>
-    </tr>
+    <!-- dst... isi tetap sama untuk mahasiswa berikutnya -->
 
     <!-- Baris Rata-rata -->
     <tr>
-      <td colspan="5"><b>Rata-Rata</b></td>
+      <td colspan="5" align="center"><b>Rata-Rata</b></td>
       <td>0</td><td>0</td><td>0</td>
       <td>0</td><td>0</td><td>0</td>
       <td>0</td><td>0</td><td>0</td>
@@ -168,10 +105,10 @@
   </table>
 
   <br>
-  <div style="margin:30px 0 0 180px;">
-    <a href="blog.html" style="display:inline-block; padding:12px 36px; font-size:1.2em; text-decoration:none; color:#333; background:#f2f2f2; border-radius:8px; margin-right:18px;">Blog</a>
-    <a href="nilai.html" style="display:inline-block; padding:12px 36px; font-size:1.2em; text-decoration:none; color:#333; background:#f2f2f2; border-radius:8px; margin-right:18px;">Tabel Nilai</a>
-    <a href="cv.html" style="display:inline-block; padding:12px 36px; font-size:1.2em; text-decoration:none; color:#333; background:#f2f2f2; border-radius:8px;">Curriculum Vitae</a>
+  <div align="center">
+    <a href="blog.html">Blog</a> |
+    <a href="nilai.html">Tabel Nilai</a> |
+    <a href="cv.html">Curriculum Vitae</a>
   </div>
 </body>
 </html>
