--- a/cv.html
+++ b/cv.html
@@ -7,6 +7,7 @@
 <body>
   <h1>Curriculum Vitae</h1>
   <img src="josua.JPG" alt="Foto" width="150">
+
   <h2>Tentang Saya</h2>
   <p>Saya adlalah mahasiswa jurusan informatika, yang berkuliah di IT DEL. Sekarang saya sedang belajar pengembangan web. Jadi maaf yaa kalau hasil web nya masih jelek. Maklumllah kan masih belajar. </p>
 
@@ -44,10 +45,20 @@
     <li><a href="https://github.com/username">GitHub</a></li>
   </ul>
 
-  <div style="margin:30px 0 0 180px;">
-    <a href="blog.html" style="display:inline-block; padding:12px 36px; font-size:1.2em; text-decoration:none; color:#333; background:#f2f2f2; border-radius:8px; margin-right:18px;">Blog</a>
-    <a href="nilai.html" style="display:inline-block; padding:12px 36px; font-size:1.2em; text-decoration:none; color:#333; background:#f2f2f2; border-radius:8px; margin-right:18px;">Tabel Nilai</a>
-    <a href="cv.html" style="display:inline-block; padding:12px 36px; font-size:1.2em; text-decoration:none; color:#333; background:#f2f2f2; border-radius:8px;">Curriculum Vitae</a>
-  </div>
+  <center>
+    <table border="1" cellpadding="15" cellspacing="10">
+      <tr>
+        <td align="center" bgcolor="#f2f2f2" width="200">
+          <a href="blog.html"><font size="4">Blog</font></a>
+        </td>
+        <td align="center" bgcolor="#f2f2f2" width="200">
+          <a href="nilai.html"><font size="4">Tabel Nilai</font></a>
+        </td>
+        <td align="center" bgcolor="#f2f2f2" width="200">
+          <a href="cv.html"><font size="4">Curriculum Vitae</font></a>
+        </td>
+      </tr>
+    </table>
+  </center>
 </body>
 </html>
