--- a/nilai.html
+++ b/nilai.html
@@ -5,9 +5,9 @@
   <title>Tabel Perolehan Nilai</title>
 </head>
 <body>
-  <h1 align="center">Tabel Perolehan Nilai</h1>
+  <h1>Tabel Perolehan Nilai</h1>
 
-  <table border="1" cellpadding="5" cellspacing="0" align="center">
+  <table border="1" cellpadding="5" cellspacing="0">
     <!-- Header Utama -->
     <tr>
       <th rowspan="4">No</th>
@@ -15,100 +15,188 @@
       <th rowspan="4">Nama</th>
       <th rowspan="4">Program Studi</th>
       <th rowspan="4">Kelas</th>
-      <th colspan="3">Kuis</th>
-      <th colspan="3">Proyek</th>
-      <th colspan="3">Tugas</th>
-      <th colspan="3">UAS</th>
-      <th colspan="4">UTS</th>
-      <th rowspan="4">Bentuk komponen<br>Bobot / Nilai Akhir</th>
+      <th colspan="4">Kuis</th>
+      <th colspan="4">Proyek</th>
+      <th colspan="4">Tugas</th>
+      <th colspan="4">UAS</th>
+      <th colspan="6">UTS</th>
+      <th rowspan="4">Bentuk Komponen<br>Bobot/Nilai Akhir</th>
     </tr>
 
     <!-- Header Bobot -->
     <tr>
-      <th colspan="3">Bobot 10</th>
-      <th colspan="3">Bobot 5</th>
-      <th colspan="3">Bobot 15</th>
-      <th colspan="3">Bobot 40</th>
-      <th colspan="4">Bobot 30</th>
+      <th colspan="4"></th>
+      <th colspan="4"></th>
+      <th colspan="4"></th>
+      <th colspan="4"></th>
+      <th colspan="6"></th>
     </tr>
 
     <!-- Header Subbagian -->
     <tr>
       <!-- Kuis -->
       <th colspan="2">Nilai</th>
-      <th rowspan="2">Total</th>
+      <th>Total</th>
+      <th>Bobot</th>
 
       <!-- Proyek -->
       <th colspan="2">Nilai</th>
-      <th rowspan="2">Total</th>
+      <th>Total</th>
+      <th>Bobot</th>
 
       <!-- Tugas -->
       <th colspan="2">Nilai</th>
-      <th rowspan="2">Total</th>
+      <th>Total</th>
+      <th>Bobot</th>
 
       <!-- UAS -->
       <th colspan="2">Nilai</th>
-      <th rowspan="2">Total</th>
+      <th>Total</th>
+      <th>Bobot</th>
 
       <!-- UTS -->
-      <th colspan="3">Nilai</th>
-      <th rowspan="2">Total</th>
+      <th colspan="4">Nilai</th>
+      <th>Total</th>
+      <th>Bobot</th>
     </tr>
 
     <!-- Header Detail -->
     <tr>
+      <!-- Kuis -->
       <th>K1-1</th>
       <th>K1-2</th>
+      <th>100</th>
+      <th>10</th>
 
+      <!-- Proyek -->
       <th>P2-1</th>
       <th>P1-1</th>
+      <th>100</th>
+      <th>5</th>
 
+      <!-- Tugas -->
       <th>T1-1</th>
       <th>T2-1</th>
+      <th>100</th>
+      <th>15</th>
 
+      <!-- UAS -->
       <th>UAS1-1</th>
       <th>UAS2-1</th>
+      <th>100</th>
+      <th>40</th>
 
+      <!-- UTS -->
       <th>UTS1-1</th>
       <th>UTS2-1</th>
       <th>UTS2-2</th>
+      <th>UTS2-3</th>
+      <th>100</th>
+      <th>30</th>
     </tr>
 
     <!-- Data Mahasiswa -->
     <tr>
       <td>1</td><td>11S2400</td><td>David Lodewick Simbolon</td><td>Sarjana</td><td>11IF1</td>
-      <td>0</td><td>0</td><td>0</td>
-      <td>0</td><td>0</td><td>0</td>
-      <td>0</td><td>0</td><td>0</td>
-      <td>0</td><td>0</td><td>0</td>
       <td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td>
     </tr>
     <tr>
       <td>2</td><td>11S2400</td><td>Edwin Christofel</td><td>Sarjana</td><td>11IF1</td>
-      <td>0</td><td>0</td><td>0</td>
-      <td>0</td><td>0</td><td>0</td>
-      <td>0</td><td>0</td><td>0</td>
-      <td>0</td><td>0</td><td>0</td>
       <td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td>
     </tr>
-    <!-- dst... isi tetap sama untuk mahasiswa berikutnya -->
+    <tr>
+      <td>3</td><td>11S2400</td><td>Aditya Putera Kelat</td><td>Sarjana</td><td>11IF1</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td>
+    </tr>
+    <tr>
+      <td>4</td><td>11S2400</td><td>Gian Donovan</td><td>Sarjana</td><td>11IF1</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td>
+    </tr>
+    <tr>
+      <td>5</td><td>11S2400</td><td>Ruti Claudia Panggabean</td><td>Sarjana</td><td>11IF1</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td>
+    </tr>
+    <tr>
+      <td>6</td><td>11S2400</td><td>Martha Saulina Nababan</td><td>Sarjana</td><td>11IF1</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td>
+    </tr>
+    <tr>
+      <td>7</td><td>11S2400</td><td>Miftahul Jannah Siregar</td><td>Sarjana</td><td>11IF1</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td>
+    </tr>
+    <tr>
+      <td>8</td><td>11S2400</td><td>Dea Maranata Siregar</td><td>Sarjana</td><td>11IF1</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td>
+    </tr>
+    <tr>
+      <td>9</td><td>11S2400</td><td>Sandrina Triana Sihite</td><td>Sarjana</td><td>11IF1</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td>
+    </tr>
+    <tr>
+      <td>10</td><td>11S2401</td><td>Dimas Rexan Samuel</td><td>Sarjana</td><td>11IF1</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td>
+    </tr>
 
     <!-- Baris Rata-rata -->
     <tr>
-      <td colspan="5" align="center"><b>Rata-Rata</b></td>
-      <td>0</td><td>0</td><td>0</td>
-      <td>0</td><td>0</td><td>0</td>
-      <td>0</td><td>0</td><td>0</td>
-      <td>0</td><td>0</td><td>0</td>
+      <td colspan="5"><b>Rata-Rata</b></td>
       <td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td>
+      <td>0</td>
     </tr>
   </table>
-
-  <br>
-  <div align="center">
-    <a href="blog.html">Blog</a> |
-    <a href="nilai.html">Tabel Nilai</a> |
-    <a href="cv.html">Curriculum Vitae</a>
-  </div>
 </body>
 </html>
