--- a/index.html
+++ b/index.html
@@ -1,13 +1,72 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-    <meta charset="UTF-8">
-    <title>Latihan HTML</title>
+  <meta charset="UTF-8">
+  <title>Blog</title>
 </head>
 <body>
-    <h1>Halo, Selamat Datang</h1>
-    <h2>Josua Lens Franklin Saragih</h2>
-    <p>Hobi saya adalah memancing.</p>
-    <p>Umur saya 20 tahun.</p>
+  <center>
+    <h1>
+      <font face="Brush Script MT, cursive" size="7">
+        Hello, Welcome to My Blog!
+      </font>
+    </h1>
+  </center>
+
+  <center>
+    <img src="rame.png" alt="Cover Blog" border="1" width="100%">
+  </center>
+  
+  <center>
+    <p>
+      <font face="Times New Roman, serif" size="5">
+        Selamat datang di blog saya! Di sini saya akan berbagi artikel tentang berbagai topik menarik. Tapi kenalan bentar dulu yaa
+      </font>
+    </p>
+  </center>
+
+  <center>
+    <img src="profil.jpg" alt="Foto Profil" border="1" width="240" height="320">
+  </center>
+  
+  <article>
+    <h2 align="center">Josua Lens Franklin Saragih</h2>
+    <p align="center">Tanggal diposting : 3 September 2025</p>
+  </article>
+
+  <div align="center">
+    <table border="6" cellpadding="24" cellspacing="0" width="520">
+      <tr bgcolor="#cfd8dc">
+        <th colspan="2">
+          <font size="6"><b>Menu Navigasi</b></font>
+        </th>
+      </tr>
+      <tr>
+        <td align="center" bgcolor="#e0e7ef" width="200" height="80">
+          <a href="detail-blog.html">
+            <font size="5"><b>Detail Blog</b></font>
+          </a>
+        </td>
+        <td align="center" bgcolor="#e0e7ef" width="200" height="80">
+          <a href="form.html">
+            <font size="5"><b>Form Pendaftaran</b></font>
+          </a>
+        </td>
+      </tr>
+      <tr>
+        <td align="center" bgcolor="#e0e7ef" width="200" height="80">
+          <a href="nilai.html">
+            <font size="5"><b>Tabel Nilai</b></font>
+          </a>
+        </td>
+        <td align="center" bgcolor="#e0e7ef" width="200" height="80">
+          <a href="cv.html">
+            <font size="5"><b>CV</b></font>
+          </a>
+        </td>
+      </tr>
+    </table>
+  </div>
+
 </body>
 </html>
